--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "study threejs",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server",
-    "build": "webpack"
+    "dev": "export NODE_ENV=development && webpack-dev-server",
+    "build": "rm -rf ./dist && export NODE_ENV=production && webpack",
+    "deploy": "scp -r dist/. root@175.24.185.163:/usr/share/nginx/html"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "@babel/preset-react": "^7.18.6",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.3",
     "babel-loader": "^9.1.0",
     "html-webpack-plugin": "^5.5.0",
